# haikei

./: Cargo.toml  README.md  default.nix  flake.nix
.github/workflows/: rust.yml
lib/: Cargo.toml  config.rs  error.rs  lib.rs
lib/data/: mod.rs
lib/exec/: mod.rs  provider.rs  run.rs
lib/util/: constants.rs  filepath.rs  mod.rs
src/: lib.rs  main.rs
src/cli/: config.rs  env.rs  mod.rs
